src/objects/Card__c.object
<CustomObject>
    <fields>
        <fullName>Card_Holder__c</fullName>
        <label>Card Holder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cards</relationshipLabel>
        <relationshipName>Card</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Card_Product__c</fullName>
        <label>Card Product</label>
        <referenceTo>Card_Product__c</referenceTo>
        <relationshipLabel>Cards</relationshipLabel>
        <relationshipName>Cards</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>mysql field id</inlineHelpText>
        <label>Record ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>active__c</fullName>
        <label>active</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cardHolder__c</fullName>
        <inlineHelpText>mysql id field (for customer/ contact)</inlineHelpText>
        <label>cardHolder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cardProduct__c</fullName>
        <inlineHelpText>mysql field (Product Id)</inlineHelpText>
        <label>cardProduct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>endDate__c</fullName>
        <label>endDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lastFour__c</fullName>
        <label>lastFour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lost__c</fullName>
        <label>lost</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>startDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>stolen__c</fullName>
        <label>stolen</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>suspended__c</fullName>
        <label>suspended</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Card</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Card_Holder__c</columns>
        <columns>Card_Product__c</columns>
        <columns>NAME</columns>
        <columns>lastFour__c</columns>
        <columns>active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Card # MQ {0000}</displayFormat>
        <label>Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>